--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,17 @@
 {
-    "version":2,
-    "builds":[
-        {
-            "src":"./index.js",
-            "use":"@vercel/node"
-        }
-    ],
-    "routes":[
-        {
-            "src":"/(.*)",
-            "dest":"/"
-        }
-    ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "./index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "methods": ["GET", "POST", "PUT", "DELETE"],
+      "headers": "Origin, X-Requested-With, Content-Type, Accept",
+      "dest": "/"
+    }
+  ]
 }
