--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
     {
       "src": "/(.*)",
       "methods": ["GET", "POST", "PUT", "DELETE"],
-      "headers": "Origin, X-Requested-With, Content-Type, Accept",
+      "headers": {"Origin": "X-Requested-With","Content-Type":"Accept"},
       "dest": "/"
     }
   ]
